add Jenkins file to augusto_homepage

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,11 +2,11 @@ pipeline {
     agent any
 
     environment {
-        JENKINS_HOME = '/var/lib/jenkins'
-        DEVOPS_CODE   = '${JENKINS_HOME}/workspace/devops_test'
-        PACKER_IMG   = '${DEVOPS_CODE}/packer_img/'
-        QA_EC2_CODE  = '${DEVOPS_CODE}/QA_EC2_code/'
-        INFRA_PRO    = '${DEVOPS_CODE}/Infra_pro_terraform/'
+        JENKINS_HOME = "/var/lib/jenkins"
+        DEVOPS_CODE   = "${JENKINS_HOME}/workspace/devops_test"
+        PACKER_IMG   = "${DEVOPS_CODE}/packer_img/"
+        QA_EC2_CODE  = "${DEVOPS_CODE}/QA_EC2_code/"
+        INFRA_PRO    = "${DEVOPS_CODE}/Infra_pro_terraform/"
     }
 
     stages {
@@ -14,19 +14,19 @@ pipeline {
         stage('Test_QA_EC2') {
             steps {
                 echo 'Testing..'
-               sh 'cd env.QA_EC2_CODE && ./app_test.sh'
+               sh 'cd ${QA_EC2_CODE} && ./app_test.sh'
             }
         }
         stage('Build_packer_image') {
             steps {
                 echo 'Building..'
-                sh 'cd env.PACKER_IMG && ./app_build.sh'
+                sh 'cd ${PACKER_IMG} && ./app_build.sh'
             }
         }
         stage('Deploy_Infra_Pro') {
             steps {
                 echo 'Deploying..'
-                sh 'cd env.INFRA_PRO && ./infra_build.sh'
+                sh 'cd ${INFRA_PRO} && ./infra_build.sh'
             }
         }
     }
